force-app/main/default/objects/PlanoSaude__c/PlanoSaude__c.object-meta.xml
<CustomObject>
    <label>Plano de Saúde</label>
    <nameField>
        <label>Plano de Saúde</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Planos de Saúde</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>