force-app/main/default/objects/PlanoSaude__c/fields/Carencia__c.field-meta.xml
<CustomField>
    <fullName>Carencia__c</fullName>
    <label>Carência (Dias)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>