force-app/main/default/objects/PlanoSaude__c/fields/Cobertura__c.field-meta.xml
<CustomField>
    <fullName>Cobertura__c</fullName>
    <label>Cobertura</label>
    <length>255</length>
    <type>Text</type>
</CustomField>