force-app/main/default/objects/PlanoSaude__c/fields/DataVencimento__c.field-meta.xml
<CustomField>
    <fullName>DataVencimento__c</fullName>
    <defaultValue>today() + 365</defaultValue>
    <label>Data de Vencimento</label>
    <type>Date</type>
</CustomField>