force-app/main/default/objects/PlanoSaude__c/fields/StatusPlano__c.field-meta.xml
<CustomField>
    <fullName>StatusPlano__c</fullName>
    <formula>IF( DataVencimento__c &gt; today() , true , false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>StatusPlano</label>
    <type>Checkbox</type>
</CustomField>